Changes in UI of admin postal

--- a/QuizMasterClient/QuizMasterClient/Style/Presenter.css
+++ b/QuizMasterClient/QuizMasterClient/Style/Presenter.css
@@ -1,5 +1,1 @@
-﻿body {
-    background-image: url(../Content/images/banner.png);
-    background-repeat: no-repeat;
-    background-size:100%;
-}
+﻿
