--- a/QuizMasterClient/QuizMasterClient/Views/admin/adminPortal.html
+++ b/QuizMasterClient/QuizMasterClient/Views/admin/adminPortal.html
@@ -11,6 +11,10 @@
     <script src="../../Scripts/Shared/angular-cookies.js"></script>
     <script src="../../Scripts/Shared/angular-route.js"></script>
     <script src="../../Scripts/Shared/angular-ui-router.js"></script>
+    <!--Style Sheets-->
+    <link rel="stylesheet" type="text/css" href="../../Content/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="../../Style/admin.css" />
+    <link rel="stylesheet" type="text/css" href="../../Style/common.css" />
 
     <!--Modules-->
     <script src="../../Scripts/app.js"></script>
@@ -22,14 +26,30 @@
     <script src="../../Scripts/Controllers/admin/usersController.js"></script>
 </head>
 <body ng-app="adminPortal" data-ng-init="init()" ng-controller="adminPortalController" ng-show="showIfAuthorized">
-    <h1>Home</h1>
-    <p >{{ content  }}</p> 
-    <p>{{ message }}</p>
+    <div class="bg-img"></div>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" ui-sref="home">QuizMaster</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li><a ui-sref="questions">Questions</a></li>
+                    <li><a ui-sref="users">Users</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a><span class="glyphicon glyphicon-user"></span>Profile</a>
+                    </li>
+                    <li>
+                        <a><span class="glyphicon glyphicon-log-out"></span>Log Out</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
-    <a ui-sref="home">Home</a>
-    <a ui-sref="questions">Questions</a>
-    <a ui-sref="users">Users</a>
-
-    <div ui-view=""></div>
+        <h1>Home</h1>
+        <p>{{ content  }}</p>
+        <p>{{ message }}</p>
+        <div ui-view=""></div>
 </body>
 </html>
