--- a/QuizMasterClient/QuizMasterClient/Views/admin/adminPortal.html
+++ b/QuizMasterClient/QuizMasterClient/Views/admin/adminPortal.html
@@ -20,6 +20,7 @@
     <script src="../../Scripts/Controllers/admin/homeController.js"></script>
     <script src="../../Scripts/Controllers/admin/questionsController.js"></script>
     <script src="../../Scripts/Controllers/admin/usersController.js"></script>
+    <script src="../../Scripts/Controllers/admin/teamsController.js"></script>
 </head>
 <body ng-app="adminPortal" data-ng-init="init()" ng-controller="adminPortalController" ng-show="showIfAuthorized">
     <h1>Home</h1>
@@ -29,6 +30,7 @@
     <a ui-sref="home">Home</a>
     <a ui-sref="questions">Questions</a>
     <a ui-sref="users">Users</a>
+    <a ui-sref="teams">Teams</a>
 
     <div ui-view=""></div>
 </body>
