--- a/QuizMasterClient/QuizMasterClient/Views/admin/users.html
+++ b/QuizMasterClient/QuizMasterClient/Views/admin/users.html
@@ -1,2 +1,11 @@
 ﻿<h1>Users</h1>
 <p>{{message}}</p>
+
+<div class="admins">
+    <button>Add admin</button>
+  
+</div>
+
+<div class="presenters">
+
+</div>
