Complete User view in admin SPA

--- a/QuizMasterClient/QuizMasterClient/Views/admin/adminPortal.html
+++ b/QuizMasterClient/QuizMasterClient/Views/admin/adminPortal.html
@@ -36,6 +36,7 @@
                 <ul class="nav navbar-nav">
                     <li><a ui-sref="questions">Questions</a></li>
                     <li><a ui-sref="users">Users</a></li>
+                    <li><a ui-sref="teams">Teams</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
