Add options for Admin User->User->(Add and Edit)

--- a/QuizMasterClient/QuizMasterClient/Views/admin/users.html
+++ b/QuizMasterClient/QuizMasterClient/Views/admin/users.html
@@ -1,40 +1,24 @@
-﻿<div>
-    <div class="edit-user" ng-show="isEditVisible">
-        <div class="admin-edit col-lg-6" ng-show="isAdminEditVisible">
-            <!--EDIT ADMIN DETAILS-->
-            <input type="text" ng-model="editAdmin.UserId" disabled />
-            <input type="text" ng-model="editAdmin.UserName" />
-            <input type="text" ng-model="editAdmin.UserPass" />
-            <button ng-click="saveAdminEdit()">Save</button>
-        </div>
-        <div class="presenter-edit col-lg-6" ng-show="isPresenterEditVisible">
-            <!--EDIT PRESENTER DETAILS-->
-            <input type="text" ng-model="editPresenter.UserId" disabled />
-            <input type="text" ng-model="editPresenter.UserName" />
-            <input type="text" ng-model="editPresenter.UserPass" />
-            <button ng-click="savePresenterEdit()">Save</button>
-        </div>
-    </div>
-    <div class="add-user" ng-show="isAddVisible">
-        <div class="admin-add col-lg-6" ng-show="isAdminAddVisible">
-            <!--ADD NEW ADMIN USER-->
-            <input type="text" ng-model="addAdmin.UserName" />
-            <input type="text" ng-model="addAdmin.UserPass" />
-            <button ng-click="saveAdminAdd()">Save/Add</button>
-        </div>
-        <div class="presenter-edit col-lg-6" ng-show="isPresenterAddVisible">
-            <!--ADD NEW PRESENTER USER-->
-            <input type="text" ng-model="addPresenter.UserName" />
-            <input type="text" ng-model="addPresenter.UserPass" />
-            <button ng-click="savePresenterAdd()">Save/Add</button>
-        </div>
-    </div>
-</div>
-
+﻿
 <div>
     <div class="admins col-lg-6">
         <h1>Admin</h1>
         <button ng-click="addAdminUser()">Add admin</button>
+        <div class="admin" ng-show="isAdminVisible">
+            <div class="admin-add" ng-show="isAdminAddVisible">
+                <!--ADD NEW ADMIN USER-->
+                <input type="text" ng-model="addAdmin.UserName" />
+                <input type="text" ng-model="addAdmin.UserPass" />
+                <button ng-click="saveAdminAdd()">Save/Add</button>
+            </div>
+            <div class="admin-edit " ng-show="isAdminEditVisible">
+                <!--EDIT ADMIN DETAILS-->
+                <input type="text" ng-model="editAdmin.UserId" disabled />
+                <input type="text" ng-model="editAdmin.UserName" />
+                <input type="text" ng-model="editAdmin.UserPass" />
+                <button ng-click="saveAdminEdit()">Save</button>
+            </div>
+
+        </div>
         <div>
             <table data-ng-init="initAdmin()">
                 <thead>
@@ -61,7 +45,23 @@
 
     <div class="presenters col-lg-6">
         <h1>Presenter</h1>
-        <button ng-class="addPresenterUser()">Add Presenter</button>
+        <button ng-click="addPresenterUser()">Add Presenter</button>
+        <div class="presenter" ng-show="isPresenterVisible">
+
+            <div class="presenter-add" ng-show="isPresenterAddVisible">
+                <!--ADD NEW PRESENTER USER-->
+                <input type="text" ng-model="addPresenter.UserName" />
+                <input type="text" ng-model="addPresenter.UserPass" />
+                <button ng-click="savePresenterAdd()">Save/Add</button>
+            </div>
+            <div class="presenter-edit" ng-show="isPresenterEditVisible">
+                <!--EDIT PRESENTER DETAILS-->
+                <input type="text" ng-model="editPresenter.UserId" disabled />
+                <input type="text" ng-model="editPresenter.UserName" />
+                <input type="text" ng-model="editPresenter.UserPass" />
+                <button ng-click="savePresenterEdit()">Save</button>
+            </div>
+        </div>
         <div>
             <table data-ng-init="initPresenter()">
                 <thead>
