Exception handling in API Users page styling

--- a/QuizMasterClient/QuizMasterClient/Views/admin/adminPortal.html
+++ b/QuizMasterClient/QuizMasterClient/Views/admin/adminPortal.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" type="text/css" href="../../Content/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="../../Style/admin.css" />
     <link rel="stylesheet" type="text/css" href="../../Style/common.css" />
+    <link rel="icon"
+          type="image/png"
+          href="../../Content/images/icon1.png">
 
     <!--Modules-->
     <script src="../../Scripts/app.js"></script>
@@ -25,13 +28,15 @@
     <script src="../../Scripts/Controllers/admin/questionsController.js"></script>
     <script src="../../Scripts/Controllers/admin/usersController.js"></script>
     <script src="../../Scripts/Controllers/admin/teamsController.js"></script>
+
+
 </head>
 <body ng-app="adminPortal" data-ng-init="init()" ng-controller="adminPortalController" ng-show="showIfAuthorized">
     <div class="bg-img"></div>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" ui-sref="home">QuizMaster</a>
+                    <a class="navbar-brand" ui-sref="home"><span> <img src="../../Content/images/icon1.png" /> QuizMaster </span></a>
                 </div>
                 <ul class="nav navbar-nav">
                     <li><a ui-sref="questions">Questions</a></li>
@@ -40,22 +45,14 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a><span class="glyphicon glyphicon-user"></span>Profile</a>
+                        <a><span class="glyphicon glyphicon-user"></span> Profile</a>
                     </li>
                     <li>
-                        <a><span class="glyphicon glyphicon-log-out"></span>Log Out</a>
+                        <a><span class="glyphicon glyphicon-log-out"></span> Log Out</a>
                     </li>
                 </ul>
             </div>
         </nav>
-
-
-
-    <a ui-sref="home">Home</a>
-    <a ui-sref="questions">Questions</a>
-    <a ui-sref="users">Users</a>
-    <a ui-sref="teams">Teams</a>
-
     <div ui-view=""></div>
 
 </body>
