--- a/QuizMasterClient/QuizMasterClient/Style/admin.css
+++ b/QuizMasterClient/QuizMasterClient/Style/admin.css
@@ -10,11 +10,8 @@
     color:white;
     height: 100%;
     padding: 15px;
+    border-style:dashed;
     border-color:black;
-    border:10px;
-   
+    border-width: 1px;
 }
 
-    .glass h1 {
-        text-align: center;
-    }
