--- a/QuizMasterClient/QuizMasterClient/Views/admin/home.html
+++ b/QuizMasterClient/QuizMasterClient/Views/admin/home.html
@@ -1,3 +1,10 @@
-﻿<h1>Home</h1>
-<p>{{message}}</p>
-<div id="snackbar">Some text some message..</div>
+﻿<div class="glass">
+    <h1>WELCOME {{UserName}} TO QUIZ MASTER's ADMIN PORTAL</h1>
+    
+        <ul>
+            <l1><h1>You can manage Questions by clicking on Questions tab</h1></l1>
+            <l1><h1>You can manage Teams by clicking on Teams tab</h1></l1>
+            <l1><h1>You can manage Users by clicking on Users tab</h1></l1>
+        </ul>
+    
+</div>
