--- a/QuizMasterClient/QuizMasterClient/Views/admin/users.html
+++ b/QuizMasterClient/QuizMasterClient/Views/admin/users.html
@@ -6,16 +6,16 @@
         <div class="admin" ng-show="isAdminVisible">
             <div class="admin-add" ng-show="isAdminAddVisible">
                 <!--ADD NEW ADMIN USER-->
-                <input type="text" ng-model="addAdmin.UserName" />
-                <input type="text" ng-model="addAdmin.UserPass" />
-                <button ng-click="saveAdminAdd()">Save/Add</button>
+                <input type="text" ng-model="addAdmin.UserName" class="form-control" placeholder="User Name"/>
+                <input type="text" ng-model="addAdmin.UserPass" class="form-control" placeholder="Password"/>
+                <button ng-click="saveAdminAdd()" class="btn btn-primary btn-md"><span class="glyphicon glyphicon-plus"></span> Add</button>
             </div>
             <div class="admin-edit " ng-show="isAdminEditVisible">
                 <!--EDIT ADMIN DETAILS-->
-                <input type="text" ng-model="editAdmin.UserId" disabled />
-                <input type="text" ng-model="editAdmin.UserName" />
-                <input type="text" ng-model="editAdmin.UserPass" />
-                <button ng-click="saveAdminEdit()">Save</button>
+                <input type="text" ng-model="editAdmin.UserId" disabled class="form-control"/>
+                <input type="text" ng-model="editAdmin.UserName" class="form-control" />
+                <input type="text" ng-model="editAdmin.UserPass" class="form-control"/>
+                <button ng-click="saveAdminEdit()" class="btn btn-primary btn-md"><span class="glyphicon glyphicon-check"></span> Save</button>
             </div>
 
         </div>
@@ -39,49 +39,48 @@
                     </tr>
                 </tbody>
             </table>
-            </div>
-        </div>
-
-    </div>
-    <div class="col-lg-6 glass">
-        <h1>Presenter</h1>
-        <button ng-click="addPresenterUser()" class="btn btn-lg btn-primary btn-block"><span class="glyphicon glyphicon-plus-sign"></span> Add Presenter</button>
-        <div class="presenter" ng-show="isPresenterVisible">
-
-            <div class="presenter-add" ng-show="isPresenterAddVisible">
-                <!--ADD NEW PRESENTER USER-->
-                <input type="text" ng-model="addPresenter.UserName" />
-                <input type="text" ng-model="addPresenter.UserPass" />
-                <button ng-click="savePresenterAdd()">Save/Add</button>
-            </div>
-            <div class="presenter-edit" ng-show="isPresenterEditVisible">
-                <!--EDIT PRESENTER DETAILS-->
-                <input type="text" ng-model="editPresenter.UserId" disabled />
-                <input type="text" ng-model="editPresenter.UserName" />
-                <input type="text" ng-model="editPresenter.UserPass" />
-                <button ng-click="savePresenterEdit()">Save</button>
-            </div>
-        </div>
-        <div>
-            <table data-ng-init="initPresenter()" class="table">
-                <thead>
-                    <tr>
-                        <th>User_ID</th>
-                        <th>User Name</th>
-                        <th>Password</th>
-                        <th colspan="2">Options</th>
-                    </tr>
-                </thead>
-                <tbody ng-repeat="presenterUser in presenterUsers">
-                    <tr>
-                        <td>{{ presenterUser.UserId }}</td>
-                        <td>{{ presenterUser.UserName }}</td>
-                        <td>{{ presenterUser.UserPass }}</td>
-                        <td><button ng-click="editPresenterUser($index)" class="btn btn-primary"><span class="glyphicon glyphicon-edit"></span></button></td>
-                        <td><button ng-click="deletePresenterUser($index)"  class="btn btn-primary"><span class="glyphicon glyphicon-trash"></span></button></td>
-                    </tr>
-                </tbody>
-            </table>
         </div>
     </div>
+</div>
+<div class="col-lg-6 glass">
+    <h1>Presenter</h1>
+    <button ng-click="addPresenterUser()" class="btn btn-lg btn-primary btn-block"><span class="glyphicon glyphicon-plus-sign"></span> Add Presenter</button>
+    <div class="presenter" ng-show="isPresenterVisible">
+
+        <div class="presenter-add" ng-show="isPresenterAddVisible">
+            <!--ADD NEW PRESENTER USER-->
+            <input type="text" ng-model="addPresenter.UserName" class="form-control" placeholder="User Name"/>
+            <input type="text" ng-model="addPresenter.UserPass" class="form-control" placeholder="Password"/>
+            <button ng-click="savePresenterAdd()" class="btn btn-primary btn-md"><span class="glyphicon glyphicon-plus"></span> Add</button>
+        </div>
+        <div class="presenter-edit" ng-show="isPresenterEditVisible">
+            <!--EDIT PRESENTER DETAILS-->
+            <input type="text" ng-model="editPresenter.UserId" disabled class="form-control"/>
+            <input type="text" ng-model="editPresenter.UserName" class="form-control"/>
+            <input type="text" ng-model="editPresenter.UserPass" class="form-control"/>
+            <button ng-click="savePresenterEdit()" class="btn btn-primary btn-md">Save</button>
+        </div>
+    </div>
+    <div>
+        <table data-ng-init="initPresenter()" class="table">
+            <thead>
+                <tr>
+                    <th>User_ID</th>
+                    <th>User Name</th>
+                    <th>Password</th>
+                    <th colspan="2">Options</th>
+                </tr>
+            </thead>
+            <tbody ng-repeat="presenterUser in presenterUsers">
+                <tr>
+                    <td>{{ presenterUser.UserId }}</td>
+                    <td>{{ presenterUser.UserName }}</td>
+                    <td>{{ presenterUser.UserPass }}</td>
+                    <td><button ng-click="editPresenterUser($index)" class="btn btn-primary"><span class="glyphicon glyphicon-edit"></span></button></td>
+                    <td><button ng-click="deletePresenterUser($index)" class="btn btn-primary"><span class="glyphicon glyphicon-trash"></span></button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 </div>
