Add Client->Profile view and controller, bind current user(using cookies) to home (welcome message) screen

--- a/QuizMasterClient/QuizMasterClient/Views/admin/adminPortal.html
+++ b/QuizMasterClient/QuizMasterClient/Views/admin/adminPortal.html
@@ -28,6 +28,7 @@
     <script src="../../Scripts/Controllers/admin/questionsController.js"></script>
     <script src="../../Scripts/Controllers/admin/usersController.js"></script>
     <script src="../../Scripts/Controllers/admin/teamsController.js"></script>
+    <script src="../../Scripts/Controllers/admin/profileController.js"></script>
 
 
 </head>
@@ -45,7 +46,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a><span class="glyphicon glyphicon-user"></span> Profile</a>
+                        <a ui-sref="profile"><span class="glyphicon glyphicon-user"></span> Profile</a>
                     </li>
                     <li>
                         <a><span class="glyphicon glyphicon-log-out"></span> Log Out</a>
