--- a/QuizMasterClient/QuizMasterClient/Views/admin/home.html
+++ b/QuizMasterClient/QuizMasterClient/Views/admin/home.html
@@ -1,5 +1,5 @@
 ﻿<div class="glass">
-    <h1>WELCOME {{UserName}} TO QUIZ MASTER's ADMIN PORTAL</h1>
+    <h1>WELCOME {{userName}} TO QUIZ MASTER's ADMIN PORTAL</h1>
     
         <ul>
             <l1><h1>You can manage Questions by clicking on Questions tab</h1></l1>
