--- a/QuizMasterClient/QuizMasterClient/Views/admin/profile.html
+++ b/QuizMasterClient/QuizMasterClient/Views/admin/profile.html
@@ -1,3 +1,5 @@
-﻿<h1>Profile</h1>
-<h3>Username: {{ userName }}</h3>
-<h3>Password: {{ userPass }}</h3>
+﻿<div class="glass">
+    <h1>Profile</h1>
+    <h3>Username: {{ userName }}</h3>
+    <h3>Password: {{ userPass }}</h3>
+</div>
