--- a/QuizMasterClient/QuizMasterClient/Views/presenter/Teams.html
+++ b/QuizMasterClient/QuizMasterClient/Views/presenter/Teams.html
@@ -1,2 +1,30 @@
-﻿<h1>Teams</h1>
-<p>{{message}}</p>
+﻿<div class="teams col-lg-12 glass">
+    <h1>Teams</h1>
+    <div>
+        <table data-ng-init="initTeam()" class="table">
+            <thead>
+                <tr>
+                    <th>Team_ID</th>
+                    <th>Team Name</th>
+                    <th>Team Members</th>
+                    <th>Team Score</th>
+                    <th>Questions Attended</th>
+                    <th>Questions Passed</th>
+                    <th>Answers Correct</th>
+                </tr>
+            </thead>
+            <tbody ng-repeat="team in teams">
+                <tr>
+                    <td>{{ team.TeamId }}</td>
+                    <td>{{ team.TeamName }}</td>
+                    <td>{{ team.TeamMembers }}</td>
+                    <td>{{ team.TeamScore }}</td>
+                    <td>{{ team.QuestionsAttended }}</td>
+                    <td>{{ team.QuestionsPassed }}</td>
+                    <td>{{ team.AnswersCorrect }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+</div>
